--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-nah
+<html>
+
+  <head>
+      <!--
+    <script>
+        src="http://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js" integrity="sha256-zZFgUYWREnXJDw3PMQASiGmzHVL+VNfcA5eaXhipwag=" crossorigin="anonymous"></script>
+
+          -->
+          <script>
+            return;
+        var now = new Date();
+        var shutdown = 1518220799000;
+        if(true || now - shutdown > 0) {
+
+          var clock = new FlipClock($('#answer'), {
+            // ... your options here
+          });
+        }
+      </script>
+  </head>
+  <body>
+    
+    <div style="font-size:72px;position: relative;top: 50%;transform: translateY(-50%); text-align:center" id="answer">
+      yah
+    </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113892958-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113892958-1');
+    </script>
+  </body>
+</html>
