--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js" integrity="sha256-zZFgUYWREnXJDw3PMQASiGmzHVL+VNfcA5eaXhipwag=" crossorigin="anonymous"></script>
 
           -->
+          <meta property="og:title" content="Is the US Government shut down?" />
+          <meta property="og:description" content="yah" />
           <script>
             return;
         var now = new Date();
