--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js" integrity="sha256-zZFgUYWREnXJDw3PMQASiGmzHVL+VNfcA5eaXhipwag=" crossorigin="anonymous"></script>
 
           -->
-          <meta property="og:title" content="Is the US Government shut down?" />
-          <meta property="og:description" content="yah" />
+          <meta property="og:title" content="Is the US Government shutdown?" />
+          <meta property="og:image" content="http://www.clker.com/cliparts/2/9/Q/8/j/f/government-building-icon-hi.png" />
+          <meta property="og:description" content="yah basically" />
           <script>
             return;
         var now = new Date();
