--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
           -->
           <meta property="og:title" content="Is the US Government shutdown?" />
-          <meta property="og:image" content="http://www.clker.com/cliparts/2/9/Q/8/j/f/government-building-icon-hi.png" />
+          <meta property="og:image" content="https://img.clipartxtras.com/66abd6aee64aecc4da745cab8273b564_bald-head-with-question-mark-free-people-icons-head-with-question-mark-clipart_1200-630.png" />
           <meta property="og:description" content="yah basically" />
           <script>
             return;
