--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           -->
           <meta property="og:title" content="Is the US Government shutdown?" />
           <meta property="og:image" content="https://img.clipartxtras.com/66abd6aee64aecc4da745cab8273b564_bald-head-with-question-mark-free-people-icons-head-with-question-mark-clipart_1200-630.png" />
-          <meta property="og:description" content="yah basically" />
+          <meta property="og:description" content="nah not really" />
           <script>
             return;
         var now = new Date();
@@ -27,7 +27,7 @@
   <body>
     
     <div style="font-size:72px;position: relative;top: 50%;transform: translateY(-50%); text-align:center" id="answer">
-      yah
+      nah
     </div>
     <div style="position:fixed; left:0; bottom:0; width:100%; background-color:rgba(0,0,0, 0); color:black;text-align:right;">
         <a style="color:black;" href="https://www.twitter.com/asg_027">Alex Garcia</a>
