its shuttin down

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     
     <div style="font-size:72px;position: relative;top: 50%;transform: translateY(-50%); text-align:center" id="answer">
-      nah
+      ya kinda
     </div>
     <div style="position:fixed; left:0; bottom:0; width:100%; background-color:rgba(0,0,0, 0); color:black;text-align:right;">
         <a style="color:black;" href="https://www.twitter.com/asg_027">Alex Garcia</a>
